syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "Nw.gRPC.Server";

package user;

service UserGrpc{
	//有参数有返回值
	rpc GetUser(GetRequest)returns(GetReply);
	//无参数有返回值，不能直接空着，会报错
	rpc GetAll(google.protobuf.Empty)returns(GetReply);
	//有参数无返回值
	rpc Add(User) returns(google.protobuf.Empty);

	//流式调用
	//客户端分段传递数据，服务端返回对象
	rpc SelfIncreaseClient(stream BathTheCatReq)returns(IntArrayModel);

	//客户端传递数据，服务端分段返回数据
	rpc SelfIncreaseServer(IntArrayModel)returns(stream BathTheCatResp);

	//双工
	rpc SelfIncreaseDouble(stream BathTheCatReq)returns(stream BathTheCatResp);

}

message IntArrayModel{
	repeated int32 Number=1;//repeated集合
}

message BathTheCatResp{
	string message=1;
}

message BathTheCatReq{
	int32 Id=1;
}

message GetRequest{
	int32 Id=1;//int32=int，int64=long;这里的1表示对象的第一个参数
	string Name = 2;
}

message GetReply{
	int32 UserId = 1;
	string UserName = 2;
}

message User{
	int32 Id=1;
	string Name=2;
}